--- a/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Views/Customers/Details.cshtml
@@ -6,3 +6,9 @@
 
 <h2>@Model.Name</h2>
 
+<li>Membership Type: @Model.MembershipType.Name</li>
+@if (Model.DOB != null)
+{
+    <li>DOB: @Model.DOB</li>
+}
+
