Section 3 : Exercise 3 (added Details page for Movies)

--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -17,7 +17,7 @@
         @foreach (var movie in Model)
         {
             <tr>
-                <td>@movie.Name</td>
+                <td>@Html.ActionLink(@movie.Name, "Details", "Movies", new { Id = @movie.Id }, null)</td>
                 <td>@movie.GenreType.Name</td>
             </tr>
         }
