--- a/Vidly/Views/Movies/Details.cshtml
+++ b/Vidly/Views/Movies/Details.cshtml
@@ -6,3 +6,10 @@
 
 <h2>@Model.Name</h2>
 
+<ul>
+    <li>Genre: @Model.GenreType.Name</li>
+    <li>Release Date: @Model.ReleaseDate.ToString("dddd, dd MMMM yyyy")</li>
+    <li>Date Added: @Model.DateAdded.ToString("dddd, dd MMMM yyyy")</li>
+    <li>Number in Stock: @Model.NumbersInStock</li>
+</ul>
+
