--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -6,6 +6,8 @@
 
 <h2>Movies</h2>
 
+<a href="/Movies/New" class="btn btn-primary" role="button">New Movie</a>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -17,7 +19,7 @@
         @foreach (var movie in Model)
         {
             <tr>
-                <td>@Html.ActionLink(@movie.Name, "Details", "Movies", new { Id = @movie.Id }, null)</td>
+                <td>@Html.ActionLink(@movie.Name, "Edit", "Movies", new { Id = @movie.Id }, null)</td>
                 <td>@movie.GenreType.Name</td>
             </tr>
         }
