--- a/Vidly/Views/Movies/MovieForm.cshtml
+++ b/Vidly/Views/Movies/MovieForm.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-@if (Model.Movie.Id == 0)
+@if (Model.Movie == null)
 {
     <h2>New Movie</h2>
 }
@@ -23,7 +23,7 @@ else
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.ReleaseDate)
-        @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:MM/dd/yyyy}", new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:dd/MM/yyyy}", new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.GenreTypeId)
